--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!-- Başlik oluşturmak için h3 etiketini kullandım.-->
 <h3>Coşkun KARCI</h3>
 <!-- Ad Soyad adındaki başlık altında "Hakkimda" adında bir alt başlık oluşturmak için h4 etiketini kullandım.-->
-<h4> Hakkımda</h4>
-<!--Hakkımda birazcık bilgi koparabilmeniz için :) p paragraf etiketini kullandım -->
+<h4> Hakkimda</h4>
+<!--Hakkimda bilgi vermek için p paragraf etiketini kullandım -->
 <p> Merhaba. Şuan özel bir şirkette alanim dişinda çalişmaktayim.Yazilim, kodlama, programlama gibi kendimi geliştirebileceğim alanlara ilgi duymaktayim.    Kodluyoruz'u 2 yil öncesinde keşfetmiş ve abone olmuştum.Ancak yüksek lisans eğitimimin başlamasindan dolayi ara vermek zorunda kalmiştim. Şimdi böyle bir projede tekrardan kaldiğim yerden devam etmek beni mutlu etti.  </p>
-<!-- Nelerden hoşaldığımı belirtmek içinde p paragraf etiketini kullandım-->
-<p>*Kitap okumayı </p>
+<!-- Nelerden hoşaldiğimi belirtmek içinde p paragraf etiketini kullandım-->
+<p>*Kitap okumayi </p>
 <p>*Film izlemeyi</p>
-<p>*Yeni şeyler öğrenmeyi ve öğretmeyi</p>
+<p>*Yeni şeyler öğrenmeyi ve öğretmeyi çok severim.</p>
 
 
 
