--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!-- Başlik oluşturmak için h3 etiketini kullandım.-->
 <h3>Coşkun KARCI</h3>
-<!-- Ad Soyad adındaki başlık altında "Hakkimda" adında bir alt başlık oluşturmak için h4 etiketini kullandım.-->
+<!-- Ad Soyad başlik altinda "Hakkimda" adinda bir alt başlik oluşturmak için h4 etiketini kullandım.-->
 <h4> Hakkimda</h4>
-<!--Hakkimda bilgi vermek için p paragraf etiketini kullandım -->
-<p> Merhaba. Şuan özel bir şirkette alanim dişinda çalişmaktayim.Yazilim, kodlama, programlama gibi kendimi geliştirebileceğim alanlara ilgi duymaktayim.    Kodluyoruz'u 2 yil öncesinde keşfetmiş ve abone olmuştum.Ancak yüksek lisans eğitimimin başlamasindan dolayi ara vermek zorunda kalmiştim. Şimdi böyle bir projede tekrardan kaldiğim yerden devam etmek beni mutlu etti.  </p>
-<!-- Nelerden hoşaldiğimi belirtmek içinde p paragraf etiketini kullandım-->
+<!--Hakkimda bilgi vermek için p paragraf etiketini kullandim -->
+<p> Merhaba. Şuan özel bir şirkette alanim dişinda çalişmaktayim.Yazilim, kodlama, programlama gibi kendimi geliştirebileceğim alanlara ilgi duymaktayim.</p>
+<p>Kodluyoruz'u 2 yil öncesinde keşfetmiş ve abone olmuştum.Ancak yüksek lisans eğitimimin başlamasindan dolayi ara vermek zorunda kalmiştim.</p> 
+<p>Şimdi böyle bir projede tekrardan kaldiğim yerden devam etmek beni mutlu etti.  </p>
+<!-- Nelerden hoşlandiğimi belirtmek içinde p paragraf etiketini kullandım.-->
 <p>*Kitap okumayi </p>
 <p>*Film izlemeyi</p>
 <p>*Yeni şeyler öğrenmeyi ve öğretmeyi çok severim.</p>
