--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!-- Başlik oluşturmak için h3 etiketini kullandım.-->
+<!-- Başlik oluşturmak için h3 etiketini kullandim.-->
 <h3>Coşkun KARCI</h3>
-<!-- Ad Soyad başlik altinda "Hakkimda" adinda bir alt başlik oluşturmak için h4 etiketini kullandım.-->
+<!-- Ad Soyad başlik altinda "Hakkimda" adinda h3 den küçük bir alt başlik oluşturmak için h4 etiketini kullandim.-->
 <h4> Hakkimda</h4>
 <!--Hakkimda bilgi vermek için p paragraf etiketini kullandim -->
 <p> Merhaba. Şuan özel bir şirkette alanim dişinda çalişmaktayim.Yazilim, kodlama, programlama gibi kendimi geliştirebileceğim alanlara ilgi duymaktayim.</p>
